--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -30,7 +32,6 @@
         <activity android:name=".ui.SuperAdminActivity" />
         <activity android:name=".ui.AddRestaurantActivity" />
         <activity android:name=".ui.AddAdminActivity" />
-
     </application>
 
 </manifest>
